# saorsa-node

./: .gitignore  Cargo.toml  README.md  S3-vs-Saorsa-Architecture-Analysis.md
.github/workflows/: ci.yml  release.yml
deploy/monitoring/: grafana-saorsa-complete.json  grafana-saorsa-data.json  grafana-saorsa-metrics.json  grafana-saorsa-payments.json
deploy/monitoring/prometheus/rules/: saorsa-alerts.yml
deploy/scripts/: spawn-nodes.sh
deploy/terraform/cloud-init/: worker.yml
docs/: DESIGN.md  TESTNET_500_NODE_PLAN.md  TESTNET_DEPLOYMENT.md
scripts/testnet/: churn-test.sh  churn-verify.sh  load-test.sh  spawn-nodes.sh  upgrade-test.sh
sign/: release-signing-key.pub
src/: config.rs  error.rs  event.rs  lib.rs  node.rs
src/client/: data_types.rs  hybrid.rs  legacy.rs  mod.rs  quantum.rs
src/migration/: decrypt.rs  mod.rs  scanner.rs
src/payment/: autonomi_verifier.rs  cache.rs  mod.rs  quote.rs  verifier.rs  wallet.rs
src/upgrade/: apply.rs  mod.rs  monitor.rs  rollout.rs  signature.rs
systemd/: saorsa-node.service
tests/e2e/: anvil.rs  harness.rs  integration_tests.rs  live_testnet.rs  mod.rs  testnet.rs
tests/e2e/data_types/: chunk.rs  graph_entry.rs  mod.rs  pointer.rs  scratchpad.rs
wix/: license.rtf  main.wxs
